{
    "name": "inputController",
    "maps": [
        {
            "name": "Main",
            "id": "7c0e8756-5619-42d1-86d3-d7d1f905c030",
            "actions": [
                {
                    "name": "MouseScroll",
                    "type": "Value",
                    "id": "9c860fcc-5e5c-402a-a4ab-e9ff81508b8f",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MouseLeftClick",
                    "type": "Button",
                    "id": "647fd26d-b086-4944-aefb-4fee432c827a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MouseRightClick",
                    "type": "Button",
                    "id": "0c903b92-e0da-48b3-ab3c-6491e007162d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MouseMiddleClick",
                    "type": "Button",
                    "id": "2ea7edb5-9cc5-4e4a-b2f4-7ccdef84197a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Position",
                    "type": "PassThrough",
                    "id": "59f6f1e8-b64d-45fa-824d-5f4d6d15b5f9",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d1499244-00ee-43f4-8b19-5d2a49e7eabd",
                    "path": "<Mouse>/scroll",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseScroll",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "088e6beb-492f-4a3e-b124-3067968fd68f",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "MouseLeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9b21a6b9-a75f-42b3-92ad-b9105693a4c5",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseRightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ca334e8e-2c23-4740-8c2b-1821b106a824",
                    "path": "<Mouse>/middleButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseMiddleClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a3f17b85-365a-48c3-aeb6-b6abab5cf7af",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Position",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}